# ghg-be

./: README.md  main.py  pyproject.toml  sample-try-model.py
pipeline/: DisasterPredictionPipeline.py
pkg/: data_preprocessing.py
