[tool.poetry]
name = "ghg-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
joblib = "^1.4.2"
numpy = "1.26.4"
xgboost = "^2.1.1"
scikit-learn = "1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
